# osu-bot

./: Cargo.toml
src/: main.rs
