[package]
name = "osu-rank"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
rosu-v2 = "0.10.0"
serenity = { version = "0.12.4", features =  ["builder", "client", "gateway", "http", "model"] }
serenity-commands = "0.8.0"
sqlx = { version = "0.8.5", features = ["postgres"] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
